# voltage_modbus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
benches/: throughput.rs
docs/plans/: 2026-03-26-v0.5.1-bugfix.md
examples/: batch_read.rs  data_types.rs  read_meter.rs  tcp_client.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_pdu_builder.rs  fuzz_response_frame.rs  fuzz_rtu_decode.rs
src/: batcher.rs  bytes.rs  client.rs  coalescer.rs  codec.rs  constants.rs  device_limits.rs  embedded.rs  error.rs  lib.rs  logging.rs  pdu.rs  protocol.rs  register_bank.rs  scheduler.rs  server.rs  transport.rs  utils.rs  value.rs
tests/: integration_tests.rs  proptest_roundtrips.rs
