[workspace]
[package]
name = "voltage_modbus"
version = "0.4.7"
edition = "2021"
rust-version = "1.85.0"
authors = ["Evan Liu <liuyifanz.1996@gmail.com>"]
description = "A high-performance industrial Modbus library for Rust with TCP and RTU support"
license = "MIT"
homepage = "https://github.com/EvanL1/voltage_modbus"
repository = "https://github.com/EvanL1/voltage_modbus"
documentation = "https://docs.rs/voltage_modbus"
readme = "README.md"
keywords = ["modbus", "industrial", "automation", "tcp", "rtu"]
categories = ["network-programming", "embedded"]
exclude = [
    ".github/*",
    "tests/*",
    "docs/*",
    "target/*",
    "Cargo.lock",
    "*.log"
]

[lib]
name = "voltage_modbus"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
bytes = "1.4"
crc = "3.0"

# Time
chrono = "0.4"

# RTU serial support (optional)
tokio-serial = { version = "5.4", optional = true }

# IGW integration (optional)
igw = { version = "0.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
rtu = ["dep:tokio-serial"]
igw = ["dep:igw"]

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"

[[example]]
name = "read_meter"
path = "examples/read_meter.rs"

[[example]]
name = "batch_read"
path = "examples/batch_read.rs"

[[example]]
name = "data_types"
path = "examples/data_types.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
