[workspace]
[package]
name = "voltage_modbus"
version = "0.6.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Evan Liu <liuyifanz.1996@gmail.com>"]
description = "A high-performance industrial Modbus library for Rust with TCP and RTU support"
license = "MIT"
homepage = "https://github.com/EvanL1/voltage_modbus"
repository = "https://github.com/EvanL1/voltage_modbus"
documentation = "https://docs.rs/voltage_modbus"
readme = "README.md"
keywords = ["modbus", "industrial", "automation", "tcp", "rtu"]
categories = ["network-programming", "embedded"]
exclude = [
    ".github/*",
    "tests/*",
    "docs/*",
    "target/*",
    "Cargo.lock",
    "*.log"
]

[lib]
name = "voltage_modbus"
path = "src/lib.rs"

[dependencies]
# Async runtime (std only)
tokio = { version = "1.0", features = ["full"], optional = true }

# Error handling — thiserror requires std; used only in std builds
thiserror = { version = "1.0", optional = true }

# Logging — tracing supports no_std via its default-features = false path
tracing = { version = "0.1", default-features = false }

# Utilities (std only — bytes requires std allocator integration)
bytes = { version = "1.4", optional = true }

# CRC — supports no_std natively
crc = "3.0"

# defmt — optional, for embedded logging
defmt = { version = "0.3", optional = true }

# Time (std only)
chrono = { version = "0.4", optional = true }

# RTU serial support (optional, requires std)
tokio-serial = { version = "5.4", optional = true }

# IGW integration (optional, requires std)
igw = { version = "0.2", optional = true }

# Embedded async I/O (no_std compatible)
embedded-io-async = { version = "0.6", default-features = false, optional = true }

# Heapless collections for no_alloc embedded buffers
heapless = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "throughput"
harness = false
required-features = ["std"]

[features]
# std feature enables all async/network capabilities (default ON for backwards compat)
default = ["std"]
std = [
    "dep:tokio",
    "dep:thiserror",
    "dep:bytes",
    "dep:chrono",
]
rtu = ["std", "dep:tokio-serial"]
igw = ["std", "dep:igw"]

# defmt integration — derives `defmt::Format` for no_std-safe public types
# (ModbusError, ModbusFunction, ModbusException). Pairs well with `embedded`
# for RTT/USB logging on MCUs. Enables defmt's `alloc` feature so variants
# carrying `String` payloads can be formatted.
defmt = ["dep:defmt", "defmt/alloc"]

# Embedded transport: no_std + alloc, uses embedded-io-async + heapless
# Usage: cargo build --no-default-features --features embedded
embedded = ["dep:embedded-io-async", "dep:heapless"]

# no_std builds use: cargo build --no-default-features

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
required-features = ["std"]

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"
required-features = ["std"]

[[example]]
name = "read_meter"
path = "examples/read_meter.rs"
required-features = ["std"]

[[example]]
name = "batch_read"
path = "examples/batch_read.rs"
required-features = ["std"]

[[example]]
name = "data_types"
path = "examples/data_types.rs"
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
