[package]
name = "voltage-modbus-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Standalone fuzz workspace — must not be merged into the parent workspace.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }

[dependencies.voltage_modbus]
path = ".."
features = ["std", "rtu"]

# Cargo-fuzz needs nightly.  Build with:
#   cd fuzz && cargo +nightly fuzz build
#   cargo +nightly fuzz run fuzz_response_frame -- -max_total_time=60

[[bin]]
name = "fuzz_response_frame"
path = "fuzz_targets/fuzz_response_frame.rs"
test = false
doc = false

[[bin]]
name = "fuzz_rtu_decode"
path = "fuzz_targets/fuzz_rtu_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_pdu_builder"
path = "fuzz_targets/fuzz_pdu_builder.rs"
test = false
doc = false
